clusters/takeout/apps/home-automation/frigate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate
  namespace: media
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 256m
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: frigate-credentials
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "false"
spec:
  tls:
    - hosts:
        - "*.tyzbit.io"
      secretName: tyzbit.io-tls
  rules:
  - host: frigate.tyzbit.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frigate
            port:
              number: 5000
